--- a/client/modules/cases/components/List/style.scss
+++ b/client/modules/cases/components/List/style.scss
@@ -6,7 +6,7 @@
 }
 .item{
 	width: 50%;
-	float: left;
+	display: inline-block;
 	margin-bottom: 50px;
 	.inner{
 		padding-left: 5px;
@@ -27,6 +27,7 @@
 		height: 50px;
 		overflow: hidden;
 		text-overflow: ellipsis;
+		color: #666;
 	}
 	.thumb{
 		display: block;
